test/compilable/imports/test13197/y/z.d
module imports.test13197.y.z;

import imports.test13197.y;
class D : C
{
}
