test/fail_compilation/imports/test1441a.d
module imports.test1441a;

private class Foo
{
}
